--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
     <div class="greetings">
 
-        <span>H</span>
-        <span>O</span>
-        <span>L</span>
+        <span>T</span>
+        <span>E</span>
+        <span> </span>
         <span>A</span>
+        <span>M</span>
+        <span>O</span>
     </div>
     <div class="greetings">
         <span></span>
@@ -25,11 +27,11 @@
         <span></span>
     </div>
     <div class="description">
-        <span>Tengo un regalo especial para ti!!</span>
+        <span>Felices 7 meses amor🤍</span>
     </div>
     <div class="button">
         <button>
-            <a href="FLORES.html">Haga Clic</a>
+            <a href="FLORES.html">Tocame (al boton y a mi 😏)</a>
         </button>
         
     </div>
