--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <span></span>
     </div>
     <div class="description">
-        <span>Felices 7 meses amor🤍</span>
+        <span>🤍 Felices 7 meses amor 🤍</span>
     </div>
     <div class="button">
         <button>
