--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             
             // Guardar el estado del audio en localStorage
             localStorage.setItem('audioLoaded', 'true');
-            localStorage.setItem('audioSrc', 'audio/your-audio-file.mp3');
+            localStorage.setItem('audioSrc', 'audio/cancion.mp3');
             localStorage.setItem('audioCurrentTime', audio.currentTime);
 
             // Escuchar cambios en el tiempo de reproducción
