--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
     <script>
         // Crear o recuperar el elemento de audio
         if (!localStorage.getItem('audioLoaded')) {
-            const audio = new Audio('audio/cancion.mp3'); // Reemplaza con la ruta correcta
+            const audio = new Audio('audio/your-audio-file.mp3'); // Reemplaza con la ruta correcta
             audio.loop = true; // Activar el bucle
             audio.play();
             
             // Guardar el estado del audio en localStorage
             localStorage.setItem('audioLoaded', 'true');
-            localStorage.setItem('audioSrc', 'audio/cancion.mp3');
+            localStorage.setItem('audioSrc', 'audio/your-audio-file.mp3');
             localStorage.setItem('audioCurrentTime', audio.currentTime);
 
             // Escuchar cambios en el tiempo de reproducción
