--- a/FLORES.html
+++ b/FLORES.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
     <title>FLORES</title>
+
+    <script src="main.js" defer></script>
 </head>
 
 <body class="container">
